overlay/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carx-agent-web
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: carx-agent-web
  template:
    metadata:
      labels:
        deployment: carx-agent-web
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: carx-agent-web
          image: eastplayers/carx-agent-web:staging-0.1.13
          volumeMounts:
            - name: env
              mountPath: /app/.env
              subPath: env
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 80
              protocol: TCP
      volumes:
        - name: env
          secret:
            secretName: carx-agent-web
