overlay/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tribes
  annotations: 
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
        - staging.exploretribes.com
      secretName: tribes-cert-secret
  rules:
    - host: staging.exploretribes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tribes-frontend
                port:
                  number: 80
